Register and Log in components
Touch up on Home Page, added Register and Log In components (no database and authentication yet)

--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+
+    <title>Virtual Bookshelf</title>
+    <meta name="description" content="A personal online bookshelf to track, rate, and share your favorite books!" />
+    <meta name="keywords" content="books, bookshelf, library, reading, book tracker" />
+
+    <link rel="icon" type="image/png" href="/favicon.ico" />
   </head>
   <body>
     <div id="root"></div>
